--- a/mindex.html
+++ b/mindex.html
@@ -39,12 +39,13 @@
             }
 
             #question-section {
-                height: calc(60% - 60px); /* Уменьшаем высоту на 60px */
+                height: 15%; /* Уменьшаем высоту поля вопроса (было 20%) */
                 font-size: clamp(16px, 4vw, 24px); /* Автоматическое форматирование текста */
                 padding: 10px; /* Уменьшаем отступы */
             }
 
             #answer-section {
+                height: 85%; /* Увеличиваем высоту зоны ответов (было 80%) */
                 grid-template-columns: 1fr; /* Один столбец для ответов */
                 gap: 5px; /* Уменьшаем промежуток между ответами */
                 padding: 10px; /* Уменьшаем отступы */
@@ -75,6 +76,7 @@
             }
 
             #answer-section {
+                height: 90%; /* Увеличиваем высоту зоны ответов */
                 grid-template-columns: repeat(2, 1fr); /* Два столбца для ответов */
                 gap: 10px; /* Промежуток между ответами */
                 padding: 20px; /* Отступы */
