--- a/mindex.html
+++ b/mindex.html
@@ -33,19 +33,19 @@
         @media (orientation: portrait) {
             .game-container {
                 width: 100vw; /* Ширина равна ширине экрана */
-                height: calc(100vw * 16 / 9); /* Высота рассчитывается по соотношению 9:16 */
+                height: 100vh; /* Высота равна высоте экрана */
                 max-width: none; /* Убираем ограничение по ширине */
                 max-height: 100vh; /* Ограничиваем высоту экраном */
             }
 
             #question-section {
-                height: 15%; /* Уменьшаем высоту поля вопроса (было 20%) */
+                height: 15vh; /* Фиксированная высота поля вопроса */
                 font-size: clamp(16px, 4vw, 24px); /* Автоматическое форматирование текста */
                 padding: 10px; /* Уменьшаем отступы */
             }
 
             #answer-section {
-                height: 85%; /* Увеличиваем высоту зоны ответов (было 80%) */
+                height: 85vh; /* Фиксированная высота зоны ответов */
                 grid-template-columns: 1fr; /* Один столбец для ответов */
                 gap: 5px; /* Уменьшаем промежуток между ответами */
                 padding: 10px; /* Уменьшаем отступы */
@@ -70,13 +70,13 @@
             }
 
             #question-section {
-                height: 10%; /* Уменьшаем высоту на 50% */
+                height: 10vh; /* Фиксированная высота поля вопроса */
                 font-size: clamp(16px, 2.5vw, 24px); /* Автоматическое форматирование текста */
                 padding: 10px; /* Уменьшаем отступы */
             }
 
             #answer-section {
-                height: 90%; /* Увеличиваем высоту зоны ответов */
+                height: 90vh; /* Фиксированная высота зоны ответов */
                 grid-template-columns: repeat(2, 1fr); /* Два столбца для ответов */
                 gap: 10px; /* Промежуток между ответами */
                 padding: 20px; /* Отступы */
