--- a/mindex.html
+++ b/mindex.html
@@ -34,7 +34,7 @@
                 height: calc(100vw * 16 / 9); /* Высота рассчитывается по соотношению 9:16 */
                 max-width: none; /* Убираем ограничение по ширине */
                 max-height: 100vh; /* Ограничиваем высоту экраном */
-                background-color: lightcoral; /* Временный цвет для проверки */
+            /*  background-color: lightcoral; /* Временный цвет для проверки */
             }
 
             #question-section {
@@ -69,8 +69,8 @@
                 width: calc(100vh * 16 / 9); /* Ширина рассчитывается по соотношению 16:9 */
                 height: 100vh; /* Высота равна высоте экрана */
                 max-width: none; /* Убираем ограничение по ширине */
-                max-height: 100vh; /* Ограничиваем высоту экраном */
-                background-color: lightblue; /* Временный цвет для проверки */
+                max-height: 90vh; /* Ограничиваем высоту экраном */
+            /*  background-color: lightblue; /* Временный цвет для проверки */
             }
 
             #question-section {
