--- a/mindex.html
+++ b/mindex.html
@@ -70,7 +70,7 @@
                 height: 100vh; /* Высота равна высоте экрана */
                 max-width: none; /* Убираем ограничение по ширине */
                 max-height: 80vh; /* Ограничиваем высоту экраном */
-				background-color: lightblue; /* Временный цвет для проверки */
+			/* 	background-color: lightblue; /* Временный цвет для проверки */
             }
 
             #question-section {
@@ -134,9 +134,33 @@
             max-width: 100%;
         }
 
-        .answer.correct {
-            border-color: green;
-        }
+		 .answer.correct {
+			border-color: green;
+			animation: correctAnswer 0.5s ease-in-out;
+		}
+
+		.answer.wrong {
+			border-color: red;
+			animation: wrongAnswer 0.5s ease-in-out;
+		}
+
+		@keyframes correctAnswer {
+			0% { transform: scale(1); }
+			50% { transform: scale(1.05); }
+			100% { transform: scale(1); }
+		}
+
+		@keyframes wrongAnswer {
+			0% { transform: translateX(0); }
+			25% { transform: translateX(-10px); }
+			50% { transform: translateX(10px); }
+			75% { transform: translateX(-10px); }
+			100% { transform: translateX(0); }
+		}       
+		
+		.answer.correct {
+					border-color: green;
+				}
 
         .answer.wrong {
             border-color: red;
