--- a/mindex.html
+++ b/mindex.html
@@ -54,11 +54,13 @@
             }
 
             .answer {
-                padding: 10px; /* Уменьшаем отступы внутри ответов */
+                padding: 5px; /* Уменьшаем отступы внутри кнопок */
             }
 
             .answer img {
-                max-height: 60px; /* Уменьшаем размер изображений */
+                width: 95%; /* Занимает 95% ширины кнопки */
+                height: 95%; /* Занимает 95% высоты кнопки */
+                object-fit: contain; /* Сохраняет пропорции изображения */
             }
         }
 
@@ -88,8 +90,14 @@
                 padding: 20px; /* Отступы */
             }
 
+            .answer {
+                padding: 5px; /* Уменьшаем отступы внутри кнопок */
+            }
+
             .answer img {
-                max-height: 80px; /* Размер изображений */
+                width: 95%; /* Занимает 95% ширины кнопки */
+                height: 95%; /* Занимает 95% высоты кнопки */
+                object-fit: contain; /* Сохраняет пропорции изображения */
             }
         }
 
@@ -126,13 +134,7 @@
             border-radius: 10px;
             cursor: pointer;
             transition: transform 0.3s, opacity 0.3s;
-            padding: 10px; /* Отступы внутри кнопок */
             text-align: center; /* Центрирование текста */
-        }
-
-        .answer img {
-            max-height: 60px; /* Размер изображений */
-            margin: 0 auto; /* Центрирование изображения */
         }
 
         .answer.correct {
